--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
         "php": "^8.1",
         "darkaonline/l5-swagger": "^8.6",
         "guzzlehttp/guzzle": "^7.2",
+        "jeremy379/laravel-openid-connect": "^3.0",
         "laravel/framework": "^10.10",
+        "laravel/passport": "^12.4",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "openai-php/client": "^0.14.0"
