--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "azuyalabs/yasumi": "^2.8",
         "darkaonline/l5-swagger": "^8.6",
         "guzzlehttp/guzzle": "^7.9",
+        "laravel-notification-channels/webpush": "^9.0",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
