--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,13 @@
         "azuyalabs/yasumi": "^2.8",
         "darkaonline/l5-swagger": "^8.6",
         "guzzlehttp/guzzle": "^7.9",
-        "laravel-notification-channels/webpush": "^9.0",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^3.6",
         "openai-php/client": "^0.14.0",
+        "pusher/pusher-php-server": "7.2",
+        "pusher/pusher-push-notifications": "^2.0",
         "setasign/fpdf": "^1.8"
     },
     "require-dev": {
