--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "vite": "^5.0.0"
     },
     "dependencies": {
+        "@pusher/push-notifications-web": "^1.1.0",
         "laravel-echo": "^2.2.0",
         "pusher-js": "^8.4.0"
     }
