--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,10 @@
         "php": "^8.1",
         "azuyalabs/yasumi": "^2.8",
         "darkaonline/l5-swagger": "^8.6",
+        "firebase/php-jwt": "^6.11",
         "guzzlehttp/guzzle": "^7.9",
         "laravel/framework": "^10.10",
+        "laravel/passport": "^11.8",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^3.6",
