--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.1",
         "azuyalabs/yasumi": "^2.8",
         "darkaonline/l5-swagger": "^8.6",
+        "doctrine/dbal": "^3.10",
         "firebase/php-jwt": "^6.11",
         "guzzlehttp/guzzle": "^7.9",
         "laravel/framework": "^10.10",
