--- a/composer.json
+++ b/composer.json
@@ -37,8 +37,10 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
-        
+        },
+        "files": [
+            "app/Helpers/ConformiteHelpers.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
