--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "openai-php/laravel": "^0.11.0",
         "pusher/pusher-php-server": "7.2",
         "pusher/pusher-push-notifications": "^2.0",
-        "setasign/fpdf": "^1.8"
+        "setasign/fpdf": "^1.8",
+        "smalot/pdfparser": "^2.12"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
