--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "require": {
         "php": "^8.1",
         "azuyalabs/yasumi": "^2.8",
-        "barryvdh/laravel-dompdf": "3.0",
+        "barryvdh/laravel-dompdf": "^3.1",
         "darkaonline/l5-swagger": "^8.6",
         "doctrine/dbal": "^3.10",
         "firebase/php-jwt": "^6.11",
